<resources>
    <string name="app_name">Donation</string>
    <string name="welcome">Welcome to our service!</string>
    <string name="donateTitle">Donation App</string>
    <string name="welcomeLogin">Login</string>
    <string name="welcomeSignup">Sign up</string>
    <string name="menuEditDetails">Edit Details</string>
    <string name="menuLogin">Login</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="menuLogout">Logout</string>
    <string name="menuSignup">Signup</string>
    <string name="menuAdmin">Admin Panel</string>
    <string name="menuCreate">Create Candidate</string>
    <string name="adminPanelTitle">Admin Panel</string>
    <string name="donateButton">Donate</string>
    <string name="selectCandidateTitle">Select Candidate</string>
    <string name="paymentMethodTitle">Payment Method</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="amount">Enter Amount:</string>
    <string name="initialAmount">0</string>
    <string name="amountSoFarLabel">Total so far:</string>
    <string name="action_settings">Settings</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="filterForDonations">Filter for Donations</string>
    <string name="applyFilterText">Apply Filter</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signupTitle">Register</string>
    <string name="signupRegister">Register</string>
    <string name="registrationInfoLbl">Registration Information</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="signupFirstname">First name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupAge">Age</string>
    <string name="signupAddressLineOne">Address Line 1</string>
    <string name="signupAddressLineTwo">Address Line 2</string>
    <string name="select">Select Country</string>
    <string name="select1">Afghanistan</string>
	<string name="select2">Aland Islands</string>
	<string name="select3">Albania</string>
	<string name="select4">Algeria</string>
	<string name="select5">American Samoa</string>
	<string name="select6">Andorra</string>
	<string name="select7">Angola</string>
	<string name="select8">Anguilla</string>
	<string name="select9">Antarctica</string>
	<string name="select10">Antigua and Barbuda</string>
	<string name="select11">Argentina</string>
	<string name="select12">Armenia</string>
	<string name="select13">Aruba</string>
	<string name="select14">Australia</string>
	<string name="select15">Austria</string>
	<string name="select16">Azerbaijan</string>
	<string name="select17">Bahamas</string>
	<string name="select18">Bahrain</string>
	<string name="select19">Bangladesh</string>
	<string name="select20">Barbados</string>
	<string name="select21">Belarus</string>
	<string name="select22">Belgium</string>
	<string name="select23">Belize</string>
	<string name="select24">Benin</string>
	<string name="select25">Bermuda</string>
	<string name="select26">Bhutan</string>
	<string name="select27">Bolivia</string>
	<string name="select28">Bosnia and Herzegovina</string>
	<string name="select29">Botswana</string>
	<string name="select30">Bouvet Island</string>
	<string name="select31">Brazil</string>
	<string name="select32">British Indian Ocean Territory</string>
	<string name="select33">British Virgin Islands</string>
	<string name="select34">Brunei</string>
	<string name="select35">Bulgaria</string>
	<string name="select36">Burkina Faso</string>
	<string name="select37">Burundi</string>
	<string name="select38">Cambodia</string>
	<string name="select39">Cameroon</string>
	<string name="select40">Canada</string>
	<string name="select41">Cape Verde</string>
	<string name="select42">Cayman Islands</string>
	<string name="select43">Central African Republic</string>
	<string name="select44">Chad</string>
    <string name="select45">Chile</string>
	<string name="select46">China</string>
    <string name="select47">Christmas Island</string>
    <string name="select48">Cocos (Keeling) Islands</string>
	<string name="select49">Colombia</string>
	<string name="select50">Congo</string>
	<string name="select51">Cook Islands</string>
	<string name="select52">Costa Rica</string>
	<string name="select53">Croatia</string>
    <string name="select54">Cuba</string>
	<string name="select55">Cyprus</string>
	<string name="select56">Czech Republic</string>
    <string name="select57">Democratic Republic of Congo</string>
	<string name="select58">Denmark</string>
	<string name="select59">Disputed Territory</string>
	<string name="select60">Djibouti</string>
	<string name="select61">Dominica</string>
	<string name="select62">Dominican Republic</string>
	<string name="select63">East Timor</string>
	<string name="select64">Ecuador</string>
	<string name="select65">Egypt</string>
	<string name="select66">El Salvador</string>
	<string name="select67">Equatorial Guinea</string>
	<string name="select68">Eritrea</string>
	<string name="select69">Estonia</string>
    <string name="select70">Ethiopia</string>
	<string name="select71">Falkland Islands</string>
	<string name="select72">Faroe Islands</string>
	<string name="select73">Federated States of Micronesia</string>
	<string name="select74">Fiji</string>
	<string name="select75">Finland</string>
    <string name="select76">France</string>
	<string name="select77">French Guyana</string>
    <string name="select78">French Polynesia</string>
	<string name="select79">French Southern Territories</string>
    <string name="select80">Gabon</string>
	<string name="select81">Gambia</string>
	<string name="select82">Georgia</string>
    <string name="select83">Germany</string>
	<string name="select84">Ghana</string>
	<string name="select85">Gibraltar</string>
	<string name="select86">Greece</string>
	<string name="select87">Greenland</string>
	<string name="select88">Grenada</string>
	<string name="select89">Guadeloupe</string>
	<string name="select90">Guam</string>
	<string name="select91">Guatemala</string>
	<string name="select92">Guinea</string>
	<string name="select93">Guinea-Bissau</string>
	<string name="select94">Guyana</string>
	<string name="select95">Haiti</string>
	<string name="select96">Heard Island and McDonald Islands</string>
	<string name="select97">Honduras</string>
	<string name="select98">Hong Kong</string>
	<string name="select99">Hungary</string>
	<string name="select100">Iceland</string>
	<string name="select101">India</string>
	<string name="select102">Indonesia</string>
	<string name="select103">Iran</string>
	<string name="select104">Iraq</string>
	<string name="select105">Iraq-Saudi Arabia Neutral Zone</string>
	<string name="select106">Ireland</string>
	<string name="select107">Israel</string>
	<string name="select108">Italy</string>
	<string name="select109">Ivory Coast</string>
	<string name="select110">Jamaica</string>
	<string name="select111">Japan</string>
	<string name="select112">Jordan</string>
	<string name="select113">Kazakhstan</string>
	<string name="select114">Kenya</string>
	<string name="select115">Kiribati</string>
	<string name="select116">Kuwait</string>
	<string name="select117">Kyrgyz Republic</string>
	<string name="select118">Laos</string>
	<string name="select119">Latvia</string>
	<string name="select120">Lebanon</string>
	<string name="select121">Lesotho</string>
	<string name="select122">Liberia</string>
	<string name="select123">Libya</string>
	<string name="select124">Liechtenstein</string>
	<string name="select125">Lithuania</string>
	<string name="select126">Luxembourg</string>
	<string name="select127">Macau</string>
	<string name="select128">Macedonia</string>
	<string name="select129">Madagascar</string>
	<string name="select130">Malawi</string>
    <string name="select131">Malaysia</string>
	<string name="select132">Maldives</string>
    <string name="select133">Mali</string>
	<string name="select134">Malta</string>
	<string name="select135">Marshall Islands</string>
	<string name="select136">Martinique</string>
	<string name="select137">Mauritania</string>
	<string name="select138">Mauritius</string>
	<string name="select139">Mayotte</string>
    <string name="select140">Mexico</string>
    <string name="select141">Moldova</string>
	<string name="select142">Monaco</string>
	<string name="select143">Mongolia</string>
	<string name="select144">Montenegro</string>
	<string name="select145">Montserrat</string>
	<string name="select146">Morocco</string>
	<string name="select147">Mozambique</string>
	<string name="select148">Myanmar</string>
	<string name="select149">Namibia</string>
	<string name="select150">Nauru</string>
	<string name="select151">Nepal</string>
	<string name="select152">Netherlands Antilles</string>
    <string name="select153">Netherlands</string>
	<string name="select154">New Caledonia</string>
	<string name="select155">New Zealand</string>
	<string name="select156">Nicaragua</string>
	<string name="select157">Niger</string>
	<string name="select158">Nigeria</string>
	<string name="select159">Niue</string>
	<string name="select160">Norfolk Island</string>
	<string name="select161">North Korea</string>
	<string name="select162">Northern Mariana Islands</string>
	<string name="select163">Norway</string>
	<string name="select164">Oman</string>
	<string name="select165">Pakistan</string>
	<string name="select166">Palau</string>
	<string name="select167">Palestinian Territories</string>
	<string name="select168">Panama</string>
	<string name="select169">Papua New Guinea</string>
	<string name="select170">Paraguay</string>
	<string name="select171">Peru</string>
	<string name="select172">Philippines</string>
	<string name="select173">Pitcairn Islands</string>
	<string name="select174">Poland</string>
	<string name="select175">Portugal</string>
	<string name="select176">Puerto Rico</string>
	<string name="select177">Qatar</string>
	<string name="select178">Reunion</string>
	<string name="select179">Romania</string>
	<string name="select180">Russia</string>
	<string name="select181">Rwanda</string>
	<string name="select182">Saint Helena and Dependencies</string>
	<string name="select183">Saint Kitts &amp; Nevis</string>
	<string name="select184">Saint Lucia</string>
	<string name="select185">Saint Pierre and Miquelon</string>
	<string name="select186">Saint Vincent and the Grenadines</string>
	<string name="select187">Samoa</string>
    <string name="region">Select Region</string>
    <string name="loginTitle">Log-in</string>
    <string name="loginDetailsLbl">Login Details</string>
    <string name="emailTitle">Email</string>
    <string name="passwordTitle">Password</string>
    <string name="loginSignin">Login Now</string>
    <string name="loginEmail">Your Email</string>
    <string name="loginPassword">Your Password</string>
    <string name="editTitle">Edit Profile Details</string>
    <string name="editButton">Edit</string>
    <string name="editInfoLbl">Personal Information</string>
    <string name="defaultFirstName">First Name</string>
    <string name="defaultLastName">Last Name</string>
    <string name="defaultOffice">Office</string>
    <string name="createTitle">Create New Candidate</string>
    <string name="candFirstName">First Name</string>
    <string name="candLastName">Last Name</string>
    <string name="candOffice">Office</string>
    <string name="defaultEmail">Email</string>
    <string name="candidateDetailsLbl">Candidate\'s Details</string>
    <string name="candFirstNameLbl">First Name</string>
    <string name="candLastNameLbl">Last Name</string>
    <string name="candOfficeLbl">Office</string>
    <string name="appWebsite">© Donation 1.0  \nwww.donation-service.herokuapp.com</string>
</resources>