<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/editTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlueColor"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:text="@string/editTitle"
        android:textColor="@color/blueColor"
        android:textSize="10pt" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.22"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/editInfoBarTextView"
                    style="@style/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/editInfoLbl" />

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/signupFirstname"
                        android:inputType="textShortMessage"
                        android:paddingTop="10dp" />

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/signupLastName"
                        android:paddingTop="10dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signupEmail"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signupPassword"
                    android:inputType="textPassword"
                    android:paddingBottom="20dp" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signupAge"
                    android:inputType="number"
                    android:paddingTop="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/AddressLineOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/signupAddressLineOne"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/AddressLineTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/signupAddressLineTwo"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/Country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/country_array"
                    android:prompt="@string/select" />

                <Spinner
                    android:id="@+id/Region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/region_array"
                    android:prompt="@string/region" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/BlueColor"
                    android:onClick="editButtonPressed"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/editButton"
                    android:textColor="@color/whiteColor" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        style="@style/footer"
        android:layout_width="match_parent"
        android:background="@color/darkBlueColor" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/appWebsite"
            android:textColor="@color/greycolor"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>