<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlueColor"
        android:paddingBottom="10dp"
        android:paddingLeft="100dp"
        android:paddingTop="10dp"
        android:text="@string/loginTitle"
        android:textColor="@color/blueColor"
        android:textSize="10pt" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.22"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/loginDetailsBarTextView"
                    style="@style/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/loginDetailsLbl" />

                <TextView
                    android:id="@+id/EmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/emailTitle"
                    android:textColor="@color/blueColor"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/loginEmail"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/PasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/passwordTitle"
                    android:textColor="@color/blueColor"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/loginPassword"
                    android:inputType="textPassword"
                    android:paddingBottom="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/BlueColor"
                    android:onClick="signinPressed"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/loginSignin"
                    android:textColor="@color/whiteColor" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        style="@style/footer"
        android:layout_width="match_parent"
        android:background="@color/darkBlueColor" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dip"
            android:text="@string/appWebsite"
            android:textColor="@color/greycolor"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>