<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    style="@style/appLayoutTheme">

    <TextView
        android:id="@+id/row_userfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:textColor="@color/whiteColor"
        android:text="@string/defaultFirstName" />

    <TextView
        android:id="@+id/row_userlastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_userfirstName"
        android:layout_alignBottom="@+id/row_userfirstName"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/row_userfirstName"
        android:textColor="@color/whiteColor"
        android:text="@string/defaultLastName" />

    <TextView
        android:id="@+id/row_useremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_userlastName"
        android:layout_alignBottom="@+id/row_userlastName"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/row_userlastName"
        android:textColor="@color/whiteColor"
        android:text="@string/defaultEmail" />

</RelativeLayout>